// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when the certificate is not verfied 1`] = `
<div
  className="undefined undefined bg-white p-3"
>
  <div
    className="mb-3"
  >
    <h5>
      Details
    </h5>
  </div>
  <div>
    <div
      className="row"
    >
      <div
        className="col-2"
      >
        <i
          className="fas fa-times-circle text-danger mr-2"
        />
      </div>
      <div
        className="col-10"
      >
        <div
          className="row"
        >
          Certificate has been tampered with
        </div>
      </div>
    </div>
    
    
    
    <hr />
  </div>
  <div>
    
    <div
      className="row"
    >
      <div
        className="col-2"
      >
        <i
          className="fas fa-check text-success mr-2"
        />
      </div>
      <div
        className="col-10"
      >
        <div
          className="row"
        >
          Certificate has been issued
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-2"
      >
        <i
          className="fas fa-check text-success mr-2"
        />
      </div>
      <div
        className="col-10"
      >
        <div
          className="row"
        >
          Issuer has been identified
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-2"
      >
        <i
          className="fas fa-check text-success mr-2"
        />
      </div>
      <div
        className="col-10"
      >
        <div
          className="row"
        >
          Certificate has not been revoked
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly when the certificate is not verfied 2`] = `
<div
  className="undefined undefined bg-white p-3"
>
  <div
    className="mb-3"
  >
    <h5>
      Details
    </h5>
  </div>
  <div>
    
    <div
      className="row"
    >
      <div
        className="col-2"
      >
        <i
          className="fas fa-times-circle text-danger mr-2"
        />
      </div>
      <div
        className="col-10"
      >
        <div
          className="row"
        >
          Certificate has not been issued
        </div>
      </div>
    </div>
    
    
    <hr />
  </div>
  <div>
    <div
      className="row"
    >
      <div
        className="col-2"
      >
        <i
          className="fas fa-check text-success mr-2"
        />
      </div>
      <div
        className="col-10"
      >
        <div
          className="row"
        >
          Certificate has not been tampered with
        </div>
      </div>
    </div>
    
    <div
      className="row"
    >
      <div
        className="col-2"
      >
        <i
          className="fas fa-check text-success mr-2"
        />
      </div>
      <div
        className="col-10"
      >
        <div
          className="row"
        >
          Issuer has been identified
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-2"
      >
        <i
          className="fas fa-check text-success mr-2"
        />
      </div>
      <div
        className="col-10"
      >
        <div
          className="row"
        >
          Certificate has not been revoked
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly when the certificate is not verfied 3`] = `
<div
  className="undefined undefined bg-white p-3"
>
  <div
    className="mb-3"
  >
    <h5>
      Details
    </h5>
  </div>
  <div>
    
    
    
    <div
      className="row"
    >
      <div
        className="col-2"
      >
        <i
          className="fas fa-times-circle text-danger mr-2"
        />
      </div>
      <div
        className="col-10"
      >
        <div
          className="row"
        >
          Certificate has been revoked
        </div>
      </div>
    </div>
    <hr />
  </div>
  <div>
    <div
      className="row"
    >
      <div
        className="col-2"
      >
        <i
          className="fas fa-check text-success mr-2"
        />
      </div>
      <div
        className="col-10"
      >
        <div
          className="row"
        >
          Certificate has not been tampered with
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-2"
      >
        <i
          className="fas fa-check text-success mr-2"
        />
      </div>
      <div
        className="col-10"
      >
        <div
          className="row"
        >
          Certificate has been issued
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-2"
      >
        <i
          className="fas fa-check text-success mr-2"
        />
      </div>
      <div
        className="col-10"
      >
        <div
          className="row"
        >
          Issuer has been identified
        </div>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`renders correctly when the certificate is not verfied 4`] = `
<div
  className="undefined undefined bg-white p-3"
>
  <div
    className="mb-3"
  >
    <h5>
      Details
    </h5>
  </div>
  <div>
    
    
    <div
      className="row"
    >
      <div
        className="col-2"
      >
        <i
          className="fas fa-times-circle text-danger mr-2"
        />
      </div>
      <div
        className="col-10"
      >
        <div
          className="row"
        >
          Issuer cannot be identified
        </div>
      </div>
    </div>
    
    <hr />
  </div>
  <div>
    <div
      className="row"
    >
      <div
        className="col-2"
      >
        <i
          className="fas fa-check text-success mr-2"
        />
      </div>
      <div
        className="col-10"
      >
        <div
          className="row"
        >
          Certificate has not been tampered with
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-2"
      >
        <i
          className="fas fa-check text-success mr-2"
        />
      </div>
      <div
        className="col-10"
      >
        <div
          className="row"
        >
          Certificate has been issued
        </div>
      </div>
    </div>
    
    <div
      className="row"
    >
      <div
        className="col-2"
      >
        <i
          className="fas fa-check text-success mr-2"
        />
      </div>
      <div
        className="col-10"
      >
        <div
          className="row"
        >
          Certificate has not been revoked
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly when the certificate is not verfied 5`] = `
<div
  className="undefined undefined bg-white p-3"
>
  <div
    className="mb-3"
  >
    <h5>
      Details
    </h5>
  </div>
  <div>
    <div
      className="row"
    >
      <div
        className="col-2"
      >
        <i
          className="fas fa-times-circle text-danger mr-2"
        />
      </div>
      <div
        className="col-10"
      >
        <div
          className="row"
        >
          Certificate has been tampered with
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-2"
      >
        <i
          className="fas fa-times-circle text-danger mr-2"
        />
      </div>
      <div
        className="col-10"
      >
        <div
          className="row"
        >
          Certificate has not been issued
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-2"
      >
        <i
          className="fas fa-times-circle text-danger mr-2"
        />
      </div>
      <div
        className="col-10"
      >
        <div
          className="row"
        >
          Issuer cannot be identified
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-2"
      >
        <i
          className="fas fa-times-circle text-danger mr-2"
        />
      </div>
      <div
        className="col-10"
      >
        <div
          className="row"
        >
          Certificate has been revoked
        </div>
      </div>
    </div>
    <hr />
  </div>
  <div>
    
    
    
    
  </div>
</div>
`;

exports[`renders correctly when the certificate verfied 1`] = `
<div
  className="undefined undefined bg-white p-3"
>
  <div
    className="mb-3"
  >
    <h5>
      Details
    </h5>
  </div>
  
  <div>
    <div
      className="row"
    >
      <div
        className="col-2"
      >
        <i
          className="fas fa-check text-success mr-2"
        />
      </div>
      <div
        className="col-10"
      >
        <div
          className="row"
        >
          Certificate has not been tampered with
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-2"
      >
        <i
          className="fas fa-check text-success mr-2"
        />
      </div>
      <div
        className="col-10"
      >
        <div
          className="row"
        >
          Certificate has been issued
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-2"
      >
        <i
          className="fas fa-check text-success mr-2"
        />
      </div>
      <div
        className="col-10"
      >
        <div
          className="row"
        >
          Issuer has been identified
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-2"
      >
        <i
          className="fas fa-check text-success mr-2"
        />
      </div>
      <div
        className="col-10"
      >
        <div
          className="row"
        >
          Certificate has not been revoked
        </div>
      </div>
    </div>
  </div>
</div>
`;
